Fix color contrast of post- and article-meta

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -165,7 +165,7 @@
 .article-meta,
 .post-meta {
   font-size: 1rem;
-  color: $color-grey;
+  color: $color-grey-dark;
   margin: 0;
 }
 
